2012-10-10  Tony Chang  <tony@chromium.org>

        Unreviewed, another speculative fix for Qt Win.

        * DerivedSources.pri: Make the path slash marks be forward slashes to the .in file.

2012-10-10  David Barton  <dbarton@mathscribe.com>

        Turn on ENABLE_MATHML for Chromium
        https://bugs.webkit.org/show_bug.cgi?id=96960

        Reviewed by Adam Barth.

        Add the rendering/mathml directory to search.

        * WebCore.gyp/WebCore.gyp:

2012-10-10  Tony Chang  <tony@chromium.org>

        Unreviewed, speculative build fix for Qt Win.

        * css/makegrammar.pl: Rather than making a temp file, use a pipe to
        pass data from gcc to the final output file.

2012-10-10  Brady Eidson  <beidson@apple.com>

        Switch CachedResource over from SharedBuffer to a new ResourceBuffer
        https://bugs.webkit.org/show_bug.cgi?id=98541

        Reviewed by Anders Carlsson.

        As part of preparation for a WebKit2 NetworkProcess, we need to change the data handle shared
        between CachedResources and ResourceLoaders to be one that can be backed by something other
        than a SharedBuffer.

        ResourceBuffer is this new object. Right now it is directly backed by a SharedBuffer and there
        should be no change in behavior.

        No new tests (No behavior change).

        * WebCore.exp.in:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCore.vcproj/WebCore.vcproj:
        * CMakeLists.txt:
        * GNUmakefile.list.am:
        * Target.pri:
        * WebCore.gypi:

        Implementation of the new ResourceBuffer, backed directly by a SharedBuffer:
        * loader/ResourceBuffer.cpp: Added.
        (WebCore):
        (WebCore::ResourceBuffer::ResourceBuffer):
        (WebCore::ResourceBuffer::~ResourceBuffer):
        (WebCore::ResourceBuffer::data):
        (WebCore::ResourceBuffer::size):
        (WebCore::ResourceBuffer::isEmpty):
        (WebCore::ResourceBuffer::getSomeData):