@@ -2,6 +2,13 @@
 
         Unreviewed, another speculative fix for Qt Win.
 
+        * DerivedSources.pri: Pass --preprocessor to the perl script.
+        * css/makegrammar.pl: Use --preprocessor instead of /usr/bin/gcc.
+
+2012-10-10  Tony Chang  <tony@chromium.org>
+
+        Unreviewed, another speculative fix for Qt Win.
+
         * DerivedSources.pri: Make the path slash marks be forward slashes to the .in file.
 
 2012-10-10  David Barton  <dbarton@mathscribe.com>
